# Homework_31_2

./: README.md  functions.py  manage.py  pyproject.toml  pytest.ini
advertisements/: admin.py  models.py  permissions.py  serializers.py  validators.py  views.py
advertisements/fixtures/: ads.json  categories.json
advertisements/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_category_name.py  0004_advertisement.py  0005_selection.py  0006_category_slug.py  0007_alter_category_slug.py  0008_alter_advertisement_name.py  0009_alter_advertisement_description.py  0010_alter_advertisement_is_published.py  0011_alter_advertisement_image.py  0012_alter_advertisement_name.py
advertisements/urls/: advertisements.py  selections.py
homework_31_2/: asgi.py  settings.py  urls.py  wsgi.py
tests/: ad_detail_test.py  ad_list_test.py  cat_create_test.py  conftest.py  factories.py  fixtures.py  loc_create_test.py  selection_create_test.py
tests/advertisements/: ad_create_test.py
users/: models.py  serializers.py  validators.py  views.py
users/fixtures/: locations.json  users.json
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_email_and_more.py  0003_alter_user_password.py  0004_alter_user_age.py  0005_user_birth_date.py  0006_alter_user_email.py  0007_alter_user_email.py  0008_alter_user_birth_date.py  0009_alter_user_birth_date.py
users/urls/: users.py
